tests/positive/basic/void_main_args/input.ci
void main(string[] args) {
    print(toString(count(args)) + "\n");
    print(args[0] + "\n");
    print(args[1] + "\n");
}
