tests/negative/semantic/byte_literal_out_of_range_negative/input.ci
void main(string[] args) {
    byte b = -1;
}
